--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <p>It was a dark and stormy night...</p>
+    <p>Little Red Riding her bike through the woods.</p>
   </body>
 </html>
