added third line of story

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>Little Red Riding her bike through the woods.</p>
+    <p>She was so hungry she ate berries that caused her to fall into a deep sleep</p>
   </body>
 </html>
